--- a/public/modules/core/css/core.less
+++ b/public/modules/core/css/core.less
@@ -284,6 +284,10 @@ ul {
 
 	@media screen and (max-width: @largeScreen) {
 		margin: 0 (@navbarHeight / 2);
+
+		li {
+			margin: 0;
+		}
 	}
 }
 
